Added application detail API and count API changes
