# openapi.yaml
@@ -436,6 +436,10 @@ paths:
                           type: number
                           description: Medical/FInancial/PSC or Underwriting required doc upload Object
                           example: "{}"
+                        premium:
+                            type: number
+                            description: Lead Premium details
+                            example: "19000"
         "401":
           description: Unauthorized - Invalid token
           content:
@@ -446,3 +450,97 @@ paths:
                   message:
                     type: string
                     example: "Unauthorized access."
+
+  /application/details:
+      post:
+        summary: Application detail using application ID
+        description: Application detail using application ID
+        operationId: appDetails
+        parameters:
+          - name: authorization
+            in: header
+            required: true
+            description: Bearer token for authorization.
+            schema:
+              type: string
+              example: "Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIs..."
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - applicationId
+                properties:
+                  statusType:
+                    type: string
+                    description: Application details using APP ID
+                    example: "12345678"
+        responses:
+          "200":
+            description: Application not found!
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    status:
+                      type: integer
+                      description: HTTP status code
+                      example: 200
+                    message:
+                      type: string
+                      description: Status message
+                      example: "Application not found!"
+                    data:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          id:
+                            type: number
+                            description: Application unique ID
+                            example: "1"
+                          application_id:
+                            type: number
+                            description: Application ID/Policy/Proposal No
+                            example: "6766647999"
+                          quote_id:
+                            type: number
+                            description: Quotation No
+                            example: "12321321321"
+                          lead_id:
+                            type: number
+                            description: Lead ID
+                            example: "1"
+                          status:
+                            type: number
+                            description: Application status like draft, QC, etc..
+                            example: "1"
+                          application_json:
+                            type: object
+                            description: Customer details object
+                            example: "{}"
+                          quote_json:
+                            type: number
+                            description: Quotation JSON Details
+                            example: "{}"
+                          requirement_json:
+                            type: number
+                            description: Medical/FInancial/PSC or Underwriting required doc upload Object
+                            example: "{}"
+                          premium:
+                            type: number
+                            description: Lead Premium details
+                            example: "19000"
+          "401":
+            description: Unauthorized - Invalid token
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    message:
+                      type: string
+                      example: "Unauthorized access."
